test/functions/operatorOverloads/operatorMethods/nestedMethodBad.good
nestedMethodBad.chpl:14: In function 'main':
nestedMethodBad.chpl:19: error: unresolved call '+(R, R)'
$CHPL_HOME/modules/internal/String.chpl:369: note: this candidate did not match: +(x: byteIndex, y: int)
nestedMethodBad.chpl:19: note: because actual argument #1 with type 'R'
$CHPL_HOME/modules/internal/String.chpl:369: note: is passed to formal 'x: byteIndex'
nestedMethodBad.chpl:19: note: other candidates are:
$CHPL_HOME/modules/internal/String.chpl:370: note:   +(x: codepointIndex, y: int)
$CHPL_HOME/modules/internal/String.chpl:372: note:   +(x: int, y: byteIndex)
note: and 95 other candidates, use --print-all-candidates to see them
